<resources>
    <string name="app_name">Qbit Gamech</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_profile">Profile</string>
    <string name="default_score">0</string>
    <string name="predict_next_ball">Predict outcome of next ball:</string>
    <string name="your_prediction">Your Prediction:</string>
    <string name="result">Result:</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="referandearn">Refer and Earn</string>
    <string name="feedback">Give Feedback</string>
    <string name="profileupdate">Update Profile</string>
    <string name="watchandearn"><![CDATA[Watch & Earn]]></string>
    <string name="faq">FAQ</string>
    <string name="qbitrewards">Qbit Rewards</string>
    <string name="qbits">Qbits</string>
    <string name="earn">Earn</string>
    <string name="redeem">Redeem</string>
    <string name="coinHistory">History</string>
    <string name="transactionHistory">Transactions</string>
    <string name="noball">No Ball</string>
    <string name="dotball">Dot Ball</string>
    <string name="sixer">Six</string>
    <string name="wicket">out</string>
    <string name="onerun">one</string>
    <string name="threerun">Three Run</string>
    <string name="tworun">Two Run</string>
    <string name="four">four</string>
    <string name="wide">Wide Ball</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="leaderboardtabs">Leaderboard Tabs</string>
    <string name="leaderboardswipe">Leaderboard Swipe</string>
    <string name="leaderboardshare">leaderboardshare</string>
    <string name="today">Today</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="third_leaderboard">3rd</string>
    <string name="secondleaderboard">2nd</string>
    <string name="firstleaderboard">1st</string>
    <string name="friendshipvalue">We value friendship!</string>
    <string name="stepsfollow">Follow steps below and get rewarded:</string>
    <string name="referstep1">1. Share your link.</string>
    <string name="referstep2">2. Your friend signup using your link.</string>
    <string name="referstep3">3. You get 1k Qbits and your friend gets 250 Qbits.</string>
    <string name="edit_image_button">edit image button</string>
    <string name="logout">Logout</string>
    <string name="enter_new_name">Enter new Display Name</string>
    <string name="enter_new_email">Enter New Email</string>
    <string name="update">Update</string>
    <string name="enter_your_feedback_here">Enter your feedback here</string>
    <string name="submit">Submit</string>
    <string name="question_2">How can I redeem my coins?</string>
    <string name="answer_2">You can redeem your coins via payment methods provided in the redeem section of wallet page. As of now addition of payment methods is under development.</string>
    <string name="answer_1">You can earn qbits by preditcting the outcome of next ball during live stream, playing quizes, fantasy leagues, games, etc. As of now only Prediction method is available. Other methods are under development.</string>
    <string name="question_1">How can I earn qbits?</string>
    <string name="question_3">Can I convert my qbits into INR?</string>
    <string name="answer_3">Yes, your previous month\'s qbits will automatically converted via Qbit Gamech\'s exchange rate on 15th of next month. You can redeem them from 16th till end of month.</string>
    <string name="question_4">Why my qbits get 0 at end of every month?</string>
    <string name="answer_4">At last date of every month your qbits will get refreshed. It doesn\'t mean your qbits are lost. Your earned qbits will be converted into INR at 15th of present month. Then you can redeem them with various payment methods.</string>
    <string name="no_transaction_available">No transactionHistory available</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="earn_by_prediction_on_live_stream">Earn by Prediction on Live Stream</string>
    <string name="no_live_event">There\'s no live event going on right now. You will be notified once we are live.</string>
    <string name="watch_video">Watch Video</string>
    <string name="live_unlock_prediction">We are live now. Watch video to unlock prediction and start earning.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="love_cricket">Love Cricket?</string>
    <string name="play_exciting_contests_like">Play exciting contests like</string>
    <string name="predicting_next_ball_outcome_quizzes">Predicting next ball outcome, Quizzes,</string>
    <string name="fantasy_leagues_and_much_more">Fantasy Leagues and much more.</string>
    <string name="get_rewarded">Get Rewarded</string>
    <string name="earn_qbits_the_app_s_currency">Earn Qbits: The app\'s Currency</string>
    <string name="redeem_rewards">Redeem Rewards</string>
    <string name="on_all_contests_you_play">on all contests you play.</string>
    <string name="your_qbits_are_converted_to_fiat">Your Qbits are converted to Fiat</string>
    <string name="on_15th_of_every_month">on 15th of every month.</string>
    <string name="then_you_can_redeem_them_to_your_bank_accounts">Then you can redeem them to your bank accounts.</string>
    <string name="get_started">Get Started</string>
</resources>