<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/spaceblue"
    tools:context=".leaderboard.Leaderboard"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/denimblue"
        app:tabTextColor="#FFFF00"
        android:id="@+id/leaderboardTabLayout"
        app:tabSelectedTextColor="@color/red">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_today_24"
            android:text="@string/today" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_view_week_24"
            android:text="@string/weekly" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_calendar_month_24"
            android:text="@string/monthly" />


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/leaderboardViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>