<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/spaceblue"
    tools:context=".ReferAndEarn">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/carter_one"
            android:text="@string/friendshipvalue"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#00BCD4"
            android:textSize="34sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/carter_one"
            android:text="@string/stepsfollow"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#00BCD4"
            android:textSize="20sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/carter_one"
            android:text="@string/referstep1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#00BCD4"
            android:textSize="16sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/carter_one"
            android:text="@string/referstep2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#00BCD4"
            android:textSize="16sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/carter_one"
            android:text="@string/referstep3"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#00BCD4"
            android:textSize="16sp"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>